- newest version from last SCROLL commit

--- a/scroll/internal/Compartment$Player.html
+++ b/scroll/internal/Compartment$Player.html
@@ -405,18 +405,18 @@
     </span>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>Any</dd></dl></div>
     </li><li name="scroll.internal.Compartment.Player#isPlaying" visbl="pub" data-isabs="false" fullComment="no" group="Ungrouped">
-      <a id="isPlaying[E](implicitevidence$18:scala.reflect.Manifest[E]):Boolean"></a>
-      <a id="isPlaying[E](Manifest[E]):Boolean"></a>
+      <a id="isPlaying[E](implicitevidence$18:reflect.runtime.universe.WeakTypeTag[E]):Boolean"></a>
+      <a id="isPlaying[E](scala.reflect.api.JavaUniverse.WeakTypeTag[E]):Boolean"></a>
       <h4 class="signature">
       <span class="modifier_kind">
         <span class="modifier"></span>
         <span class="kind">def</span>
       </span>
       <span class="symbol">
-        <span class="name">isPlaying</span><span class="tparams">[<span name="E">E</span>]</span><span class="params">(<span class="implicit">implicit </span><span name="arg0">arg0: <a href="http://www.scala-lang.org/api/2.11.7/index.html#scala.reflect.Manifest" class="extype" target="_top">Manifest</a>[<span class="extype" name="scroll.internal.Compartment.Player.isPlaying.E">E</span>]</span>)</span><span class="result">: <a href="http://www.scala-lang.org/api/2.11.7/index.html#scala.Boolean" class="extype" target="_top">Boolean</a></span>
+        <span class="name">isPlaying</span><span class="tparams">[<span name="E">E</span>]</span><span class="params">(<span class="implicit">implicit </span><span name="arg0">arg0: <span class="extype" name="scala.reflect.api.TypeTags.WeakTypeTag">scala.reflect.api.JavaUniverse.WeakTypeTag</span>[<span class="extype" name="scroll.internal.Compartment.Player.isPlaying.E">E</span>]</span>)</span><span class="result">: <a href="http://www.scala-lang.org/api/2.11.7/index.html#scala.Boolean" class="extype" target="_top">Boolean</a></span>
       </span>
       </h4><span class="permalink">
-      <a href="../../index.html#scroll.internal.Compartment$Player@isPlaying[E](implicitevidence$18:scala.reflect.Manifest[E]):Boolean" title="Permalink" target="_top">
+      <a href="../../index.html#scroll.internal.Compartment$Player@isPlaying[E](implicitevidence$18:reflect.runtime.universe.WeakTypeTag[E]):Boolean" title="Permalink" target="_top">
         <img src="../../lib/permalink.png" alt="Permalink" />
       </a>
     </span>
