--- a/scroll/internal/rpa/RolePlayingAutomaton$.html
+++ b/scroll/internal/rpa/RolePlayingAutomaton$.html
@@ -323,18 +323,18 @@ predefined states and data objects for messaging.
     </span>
       
     </li><li name="scroll.internal.rpa.RolePlayingAutomaton#Use" visbl="pub" data-isabs="false" fullComment="no" group="Ungrouped">
-      <a id="Use[T](implicitevidence$1:Manifest[T]):AnyRef{defFor(comp:scroll.internal.Compartment):akka.actor.ActorRef}"></a>
-      <a id="Use[T](Manifest[T]):AnyRef{defFor(comp:scroll.internal.Compartment):akka.actor.ActorRef}"></a>
+      <a id="Use[T](implicitct:scala.reflect.ClassTag[T]):AnyRef{defFor(comp:scroll.internal.Compartment):akka.actor.ActorRef}"></a>
+      <a id="Use[T](ClassTag[T]):AnyRef{defFor(comp:scroll.internal.Compartment):akka.actor.ActorRef}"></a>
       <h4 class="signature">
       <span class="modifier_kind">
         <span class="modifier"></span>
         <span class="kind">def</span>
       </span>
       <span class="symbol">
-        <span class="name">Use</span><span class="tparams">[<span name="T">T</span>]</span><span class="params">(<span class="implicit">implicit </span><span name="arg0">arg0: <span class="extype" name="scala.Predef.Manifest">Manifest</span>[<span class="extype" name="scroll.internal.rpa.RolePlayingAutomaton.Use.T">T</span>]</span>)</span><span class="result">: <a href="http://www.scala-lang.org/api/2.11.7/index.html#scala.AnyRef" class="extype" target="_top">AnyRef</a> { def For(comp: scroll.internal.Compartment): akka.actor.ActorRef }</span>
+        <span class="name">Use</span><span class="tparams">[<span name="T">T</span>]</span><span class="params">(<span class="implicit">implicit </span><span name="ct">ct: <a href="http://www.scala-lang.org/api/2.11.7/index.html#scala.reflect.ClassTag" class="extype" target="_top">ClassTag</a>[<span class="extype" name="scroll.internal.rpa.RolePlayingAutomaton.Use.T">T</span>]</span>)</span><span class="result">: <a href="http://www.scala-lang.org/api/2.11.7/index.html#scala.AnyRef" class="extype" target="_top">AnyRef</a> { def For(comp: scroll.internal.Compartment): akka.actor.ActorRef }</span>
       </span>
       </h4><span class="permalink">
-      <a href="../../../index.html#scroll.internal.rpa.RolePlayingAutomaton$@Use[T](implicitevidence$1:Manifest[T]):AnyRef{defFor(comp:scroll.internal.Compartment):akka.actor.ActorRef}" title="Permalink" target="_top">
+      <a href="../../../index.html#scroll.internal.rpa.RolePlayingAutomaton$@Use[T](implicitct:scala.reflect.ClassTag[T]):AnyRef{defFor(comp:scroll.internal.Compartment):akka.actor.ActorRef}" title="Permalink" target="_top">
         <img src="../../../lib/permalink.png" alt="Permalink" />
       </a>
     </span>
