--- a/scroll/internal/support/Relationships$Relationship$.html
+++ b/scroll/internal/support/Relationships$Relationship$.html
@@ -116,8 +116,8 @@ some predefined multiplicities and a fluent relationship creation API.
       <a id="ExpMultiplicity:ExpMultiplicity"></a>
       <h4 class="signature">
       <span class="modifier_kind">
-        <span class="modifier">abstract </span>
-        <span class="kind">class</span>
+        <span class="modifier"></span>
+        <span class="kind">trait</span>
       </span>
       <span class="symbol">
         <a href="Relationships$Relationship$$ExpMultiplicity.html"><span class="name">ExpMultiplicity</span></a><span class="result"> extends <a href="Relationships$Relationship$$Multiplicity.html" class="extype" name="scroll.internal.support.Relationships.Relationship.Multiplicity">Multiplicity</a></span>
@@ -150,8 +150,8 @@ some predefined multiplicities and a fluent relationship creation API.
       <a id="Multiplicity:Multiplicity"></a>
       <h4 class="signature">
       <span class="modifier_kind">
-        <span class="modifier">abstract </span>
-        <span class="kind">class</span>
+        <span class="modifier">sealed </span>
+        <span class="kind">trait</span>
       </span>
       <span class="symbol">
         <a href="Relationships$Relationship$$Multiplicity.html"><span class="name">Multiplicity</span></a><span class="result"> extends <a href="http://www.scala-lang.org/api/2.11.7/index.html#scala.AnyRef" class="extype" target="_top">AnyRef</a></span>
@@ -238,18 +238,18 @@ some predefined multiplicities and a fluent relationship creation API.
     </span>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>AnyRef → Any</dd></dl></div>
     </li><li name="scroll.internal.support.Relationships.Relationship#apply" visbl="pub" data-isabs="false" fullComment="no" group="Ungrouped">
-      <a id="apply(name:String):AnyRef{deffrom[L](leftMul:scroll.internal.support.Relationships.Relationship.Multiplicity)(implicitevidence$1:Manifest[L]):AnyRef{defto[R](rightMul:scroll.internal.support.Relationships.Relationship.Multiplicity)(implicitevidence$2:Manifest[R]):Relationships.this.Relationship[L,R]}}"></a>
-      <a id="apply(String):AnyRef{deffrom[L](leftMul:scroll.internal.support.Relationships.Relationship.Multiplicity)(implicitevidence$1:Manifest[L]):AnyRef{defto[R](rightMul:scroll.internal.support.Relationships.Relationship.Multiplicity)(implicitevidence$2:Manifest[R]):Relationships.this.Relationship[L,R]}}"></a>
+      <a id="apply(name:String):AnyRef{deffrom[L](leftMul:scroll.internal.support.Relationships.Relationship.Multiplicity)(implicitevidence$1:reflect.runtime.universe.WeakTypeTag[L]):AnyRef{defto[R](rightMul:scroll.internal.support.Relationships.Relationship.Multiplicity)(implicitevidence$2:reflect.runtime.universe.WeakTypeTag[R]):Relationships.this.Relationship[L,R]}}"></a>
+      <a id="apply(String):AnyRef{deffrom[L](leftMul:scroll.internal.support.Relationships.Relationship.Multiplicity)(implicitevidence$1:reflect.runtime.universe.WeakTypeTag[L]):AnyRef{defto[R](rightMul:scroll.internal.support.Relationships.Relationship.Multiplicity)(implicitevidence$2:reflect.runtime.universe.WeakTypeTag[R]):Relationships.this.Relationship[L,R]}}"></a>
       <h4 class="signature">
       <span class="modifier_kind">
         <span class="modifier"></span>
         <span class="kind">def</span>
       </span>
       <span class="symbol">
-        <span class="name">apply</span><span class="params">(<span name="name">name: <span class="extype" name="scala.Predef.String">String</span></span>)</span><span class="result">: <a href="http://www.scala-lang.org/api/2.11.7/index.html#scala.AnyRef" class="extype" target="_top">AnyRef</a> { def from[L](leftMul: scroll.internal.support.Relationships.Relationship.Multiplicity)(implicit evidence$1: Manifest[L]): AnyRef{def to[R](rightMul: scroll.internal.support.Relationships.Relationship.Multiplicity)(implicit evidence$2: Manifest[R]): Relationships.this.Relationship[L,R]} }</span>
+        <span class="name">apply</span><span class="params">(<span name="name">name: <span class="extype" name="scala.Predef.String">String</span></span>)</span><span class="result">: <a href="http://www.scala-lang.org/api/2.11.7/index.html#scala.AnyRef" class="extype" target="_top">AnyRef</a> { def from[L](leftMul: scroll.internal.support.Relationships.Relationship.Multiplicity)(implicit evidence$1: reflect.runtime.universe.WeakTypeTag[L]): AnyRef{def to[R](rightMul: scroll.internal.support.Relationships.Relationship.Multiplicity)(implicit evidence$2: reflect.runtime.universe.WeakTypeTag[R]): Relationships.this.Relationship[L,R]} }</span>
       </span>
       </h4><span class="permalink">
-      <a href="../../../index.html#scroll.internal.support.Relationships$Relationship$@apply(name:String):AnyRef{deffrom[L](leftMul:scroll.internal.support.Relationships.Relationship.Multiplicity)(implicitevidence$1:Manifest[L]):AnyRef{defto[R](rightMul:scroll.internal.support.Relationships.Relationship.Multiplicity)(implicitevidence$2:Manifest[R]):Relationships.this.Relationship[L,R]}}" title="Permalink" target="_top">
+      <a href="../../../index.html#scroll.internal.support.Relationships$Relationship$@apply(name:String):AnyRef{deffrom[L](leftMul:scroll.internal.support.Relationships.Relationship.Multiplicity)(implicitevidence$1:reflect.runtime.universe.WeakTypeTag[L]):AnyRef{defto[R](rightMul:scroll.internal.support.Relationships.Relationship.Multiplicity)(implicitevidence$2:reflect.runtime.universe.WeakTypeTag[R]):Relationships.this.Relationship[L,R]}}" title="Permalink" target="_top">
         <img src="../../../lib/permalink.png" alt="Permalink" />
       </a>
     </span>
