--- a/scroll/internal/support/Relationships$Relationship.html
+++ b/scroll/internal/support/Relationships$Relationship.html
@@ -92,7 +92,7 @@
         <div id="constructors" class="members">
               <h3>Instance Constructors</h3>
               <ol><li name="scroll.internal.support.Relationships.Relationship#&lt;init&gt;" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="&lt;init&gt;(name:String,leftMul:Relationships.this.Relationship.Multiplicity,rightMul:Relationships.this.Relationship.Multiplicity)(implicitevidence$3:Manifest[L],implicitevidence$4:Manifest[R]):Relationships.this.Relationship[L,R]"></a>
+      <a id="&lt;init&gt;(name:String,leftMul:Relationships.this.Relationship.Multiplicity,rightMul:Relationships.this.Relationship.Multiplicity)(implicitevidence$3:reflect.runtime.universe.WeakTypeTag[L],implicitevidence$4:reflect.runtime.universe.WeakTypeTag[R]):Relationships.this.Relationship[L,R]"></a>
       <a id="&lt;init&gt;:Compartment.Relationship[L,R]"></a>
       <h4 class="signature">
       <span class="modifier_kind">
@@ -100,10 +100,10 @@
         <span class="kind">new</span>
       </span>
       <span class="symbol">
-        <span class="name">Relationship</span><span class="params">(<span name="name">name: <span class="extype" name="scala.Predef.String">String</span></span>, <span name="leftMul">leftMul: <a href="Relationships$Relationship$$Multiplicity.html" class="extype" name="scroll.internal.support.Relationships.Relationship.Multiplicity">Multiplicity</a></span>, <span name="rightMul">rightMul: <a href="Relationships$Relationship$$Multiplicity.html" class="extype" name="scroll.internal.support.Relationships.Relationship.Multiplicity">Multiplicity</a></span>)</span><span class="params">(<span class="implicit">implicit </span><span name="arg0">arg0: <span class="extype" name="scala.Predef.Manifest">Manifest</span>[<span class="extype" name="scroll.internal.support.Relationships.Relationship.L">L</span>]</span>, <span name="arg1">arg1: <span class="extype" name="scala.Predef.Manifest">Manifest</span>[<span class="extype" name="scroll.internal.support.Relationships.Relationship.R">R</span>]</span>)</span>
+        <span class="name">Relationship</span><span class="params">(<span name="name">name: <span class="extype" name="scala.Predef.String">String</span></span>, <span name="leftMul">leftMul: <a href="Relationships$Relationship$$Multiplicity.html" class="extype" name="scroll.internal.support.Relationships.Relationship.Multiplicity">Multiplicity</a></span>, <span name="rightMul">rightMul: <a href="Relationships$Relationship$$Multiplicity.html" class="extype" name="scroll.internal.support.Relationships.Relationship.Multiplicity">Multiplicity</a></span>)</span><span class="params">(<span class="implicit">implicit </span><span name="arg0">arg0: <span class="extype" name="scala.reflect.api.TypeTags.WeakTypeTag">scala.reflect.api.JavaUniverse.WeakTypeTag</span>[<span class="extype" name="scroll.internal.support.Relationships.Relationship.L">L</span>]</span>, <span name="arg1">arg1: <span class="extype" name="scala.reflect.api.TypeTags.WeakTypeTag">scala.reflect.api.JavaUniverse.WeakTypeTag</span>[<span class="extype" name="scroll.internal.support.Relationships.Relationship.R">R</span>]</span>)</span>
       </span>
       </h4><span class="permalink">
-      <a href="../../../index.html#scroll.internal.support.Relationships$Relationship@&lt;init&gt;(name:String,leftMul:Relationships.this.Relationship.Multiplicity,rightMul:Relationships.this.Relationship.Multiplicity)(implicitevidence$3:Manifest[L],implicitevidence$4:Manifest[R]):Relationships.this.Relationship[L,R]" title="Permalink" target="_top">
+      <a href="../../../index.html#scroll.internal.support.Relationships$Relationship@&lt;init&gt;(name:String,leftMul:Relationships.this.Relationship.Multiplicity,rightMul:Relationships.this.Relationship.Multiplicity)(implicitevidence$3:reflect.runtime.universe.WeakTypeTag[L],implicitevidence$4:reflect.runtime.universe.WeakTypeTag[R]):Relationships.this.Relationship[L,R]" title="Permalink" target="_top">
         <img src="../../../lib/permalink.png" alt="Permalink" />
       </a>
     </span>
