--- a/scroll/internal/support/RoleConstraints.html
+++ b/scroll/internal/support/RoleConstraints.html
@@ -171,18 +171,18 @@ all core objects and its roles after the given function was executed.
 Throws a RuntimeException if a role constraint is violated!
 </p></div><dl class="paramcmts block"><dt class="param">func</dt><dd class="cmt"><p>the function to execute and check role constraints afterwards</p></dd></dl></div>
     </li><li name="scroll.internal.support.RoleConstraints#RoleEquivalence" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="RoleEquivalence[A,B]()(implicitevidence$3:scala.reflect.Manifest[A],implicitevidence$4:scala.reflect.Manifest[B]):Unit"></a>
-      <a id="RoleEquivalence[A,B]()(Manifest[A],Manifest[B]):Unit"></a>
+      <a id="RoleEquivalence[A,B]()(implicitevidence$3:reflect.runtime.universe.WeakTypeTag[A],implicitevidence$4:reflect.runtime.universe.WeakTypeTag[B]):Unit"></a>
+      <a id="RoleEquivalence[A,B]()(scala.reflect.api.JavaUniverse.WeakTypeTag[A],scala.reflect.api.JavaUniverse.WeakTypeTag[B]):Unit"></a>
       <h4 class="signature">
       <span class="modifier_kind">
         <span class="modifier"></span>
         <span class="kind">def</span>
       </span>
       <span class="symbol">
-        <span class="name">RoleEquivalence</span><span class="tparams">[<span name="A">A</span>, <span name="B">B</span>]</span><span class="params">()</span><span class="params">(<span class="implicit">implicit </span><span name="arg0">arg0: <a href="http://www.scala-lang.org/api/2.11.7/index.html#scala.reflect.Manifest" class="extype" target="_top">Manifest</a>[<span class="extype" name="scroll.internal.support.RoleConstraints.RoleEquivalence.A">A</span>]</span>, <span name="arg1">arg1: <a href="http://www.scala-lang.org/api/2.11.7/index.html#scala.reflect.Manifest" class="extype" target="_top">Manifest</a>[<span class="extype" name="scroll.internal.support.RoleConstraints.RoleEquivalence.B">B</span>]</span>)</span><span class="result">: <a href="http://www.scala-lang.org/api/2.11.7/index.html#scala.Unit" class="extype" target="_top">Unit</a></span>
+        <span class="name">RoleEquivalence</span><span class="tparams">[<span name="A">A</span>, <span name="B">B</span>]</span><span class="params">()</span><span class="params">(<span class="implicit">implicit </span><span name="arg0">arg0: <span class="extype" name="scala.reflect.api.TypeTags.WeakTypeTag">scala.reflect.api.JavaUniverse.WeakTypeTag</span>[<span class="extype" name="scroll.internal.support.RoleConstraints.RoleEquivalence.A">A</span>]</span>, <span name="arg1">arg1: <span class="extype" name="scala.reflect.api.TypeTags.WeakTypeTag">scala.reflect.api.JavaUniverse.WeakTypeTag</span>[<span class="extype" name="scroll.internal.support.RoleConstraints.RoleEquivalence.B">B</span>]</span>)</span><span class="result">: <a href="http://www.scala-lang.org/api/2.11.7/index.html#scala.Unit" class="extype" target="_top">Unit</a></span>
       </span>
       </h4><span class="permalink">
-      <a href="../../../index.html#scroll.internal.support.RoleConstraints@RoleEquivalence[A,B]()(implicitevidence$3:scala.reflect.Manifest[A],implicitevidence$4:scala.reflect.Manifest[B]):Unit" title="Permalink" target="_top">
+      <a href="../../../index.html#scroll.internal.support.RoleConstraints@RoleEquivalence[A,B]()(implicitevidence$3:reflect.runtime.universe.WeakTypeTag[A],implicitevidence$4:reflect.runtime.universe.WeakTypeTag[B]):Unit" title="Permalink" target="_top">
         <img src="../../../lib/permalink.png" alt="Permalink" />
       </a>
     </span>
@@ -191,18 +191,18 @@ Interpretation: if a core object plays an instance of role type A
 it also has to play an instance of role type B and visa versa.
 </p></div><dl class="paramcmts block"><dt class="tparam">A</dt><dd class="cmt"><p>type of role A that should be played implicitly if B is played</p></dd><dt class="tparam">B</dt><dd class="cmt"><p>type of role B that should be played implicitly if A is played</p></dd></dl></div>
     </li><li name="scroll.internal.support.RoleConstraints#RoleImplication" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="RoleImplication[A,B]()(implicitevidence$1:scala.reflect.Manifest[A],implicitevidence$2:scala.reflect.Manifest[B]):Unit"></a>
-      <a id="RoleImplication[A,B]()(Manifest[A],Manifest[B]):Unit"></a>
+      <a id="RoleImplication[A,B]()(implicitevidence$1:reflect.runtime.universe.WeakTypeTag[A],implicitevidence$2:reflect.runtime.universe.WeakTypeTag[B]):Unit"></a>
+      <a id="RoleImplication[A,B]()(scala.reflect.api.JavaUniverse.WeakTypeTag[A],scala.reflect.api.JavaUniverse.WeakTypeTag[B]):Unit"></a>
       <h4 class="signature">
       <span class="modifier_kind">
         <span class="modifier"></span>
         <span class="kind">def</span>
       </span>
       <span class="symbol">
-        <span class="name">RoleImplication</span><span class="tparams">[<span name="A">A</span>, <span name="B">B</span>]</span><span class="params">()</span><span class="params">(<span class="implicit">implicit </span><span name="arg0">arg0: <a href="http://www.scala-lang.org/api/2.11.7/index.html#scala.reflect.Manifest" class="extype" target="_top">Manifest</a>[<span class="extype" name="scroll.internal.support.RoleConstraints.RoleImplication.A">A</span>]</span>, <span name="arg1">arg1: <a href="http://www.scala-lang.org/api/2.11.7/index.html#scala.reflect.Manifest" class="extype" target="_top">Manifest</a>[<span class="extype" name="scroll.internal.support.RoleConstraints.RoleImplication.B">B</span>]</span>)</span><span class="result">: <a href="http://www.scala-lang.org/api/2.11.7/index.html#scala.Unit" class="extype" target="_top">Unit</a></span>
+        <span class="name">RoleImplication</span><span class="tparams">[<span name="A">A</span>, <span name="B">B</span>]</span><span class="params">()</span><span class="params">(<span class="implicit">implicit </span><span name="arg0">arg0: <span class="extype" name="scala.reflect.api.TypeTags.WeakTypeTag">scala.reflect.api.JavaUniverse.WeakTypeTag</span>[<span class="extype" name="scroll.internal.support.RoleConstraints.RoleImplication.A">A</span>]</span>, <span name="arg1">arg1: <span class="extype" name="scala.reflect.api.TypeTags.WeakTypeTag">scala.reflect.api.JavaUniverse.WeakTypeTag</span>[<span class="extype" name="scroll.internal.support.RoleConstraints.RoleImplication.B">B</span>]</span>)</span><span class="result">: <a href="http://www.scala-lang.org/api/2.11.7/index.html#scala.Unit" class="extype" target="_top">Unit</a></span>
       </span>
       </h4><span class="permalink">
-      <a href="../../../index.html#scroll.internal.support.RoleConstraints@RoleImplication[A,B]()(implicitevidence$1:scala.reflect.Manifest[A],implicitevidence$2:scala.reflect.Manifest[B]):Unit" title="Permalink" target="_top">
+      <a href="../../../index.html#scroll.internal.support.RoleConstraints@RoleImplication[A,B]()(implicitevidence$1:reflect.runtime.universe.WeakTypeTag[A],implicitevidence$2:reflect.runtime.universe.WeakTypeTag[B]):Unit" title="Permalink" target="_top">
         <img src="../../../lib/permalink.png" alt="Permalink" />
       </a>
     </span>
@@ -211,18 +211,18 @@ Interpretation: if a core object plays an instance of role type A
 it also has to play an instance of role type B.
 </p></div><dl class="paramcmts block"><dt class="tparam">A</dt><dd class="cmt"><p>type of role A</p></dd><dt class="tparam">B</dt><dd class="cmt"><p>type of role B that should be played implicitly if A is played</p></dd></dl></div>
     </li><li name="scroll.internal.support.RoleConstraints#RoleProhibition" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="RoleProhibition[A,B]()(implicitevidence$5:scala.reflect.Manifest[A],implicitevidence$6:scala.reflect.Manifest[B]):Unit"></a>
-      <a id="RoleProhibition[A,B]()(Manifest[A],Manifest[B]):Unit"></a>
+      <a id="RoleProhibition[A,B]()(implicitevidence$5:reflect.runtime.universe.WeakTypeTag[A],implicitevidence$6:reflect.runtime.universe.WeakTypeTag[B]):Unit"></a>
+      <a id="RoleProhibition[A,B]()(scala.reflect.api.JavaUniverse.WeakTypeTag[A],scala.reflect.api.JavaUniverse.WeakTypeTag[B]):Unit"></a>
       <h4 class="signature">
       <span class="modifier_kind">
         <span class="modifier"></span>
         <span class="kind">def</span>
       </span>
       <span class="symbol">
-        <span class="name">RoleProhibition</span><span class="tparams">[<span name="A">A</span>, <span name="B">B</span>]</span><span class="params">()</span><span class="params">(<span class="implicit">implicit </span><span name="arg0">arg0: <a href="http://www.scala-lang.org/api/2.11.7/index.html#scala.reflect.Manifest" class="extype" target="_top">Manifest</a>[<span class="extype" name="scroll.internal.support.RoleConstraints.RoleProhibition.A">A</span>]</span>, <span name="arg1">arg1: <a href="http://www.scala-lang.org/api/2.11.7/index.html#scala.reflect.Manifest" class="extype" target="_top">Manifest</a>[<span class="extype" name="scroll.internal.support.RoleConstraints.RoleProhibition.B">B</span>]</span>)</span><span class="result">: <a href="http://www.scala-lang.org/api/2.11.7/index.html#scala.Unit" class="extype" target="_top">Unit</a></span>
+        <span class="name">RoleProhibition</span><span class="tparams">[<span name="A">A</span>, <span name="B">B</span>]</span><span class="params">()</span><span class="params">(<span class="implicit">implicit </span><span name="arg0">arg0: <span class="extype" name="scala.reflect.api.TypeTags.WeakTypeTag">scala.reflect.api.JavaUniverse.WeakTypeTag</span>[<span class="extype" name="scroll.internal.support.RoleConstraints.RoleProhibition.A">A</span>]</span>, <span name="arg1">arg1: <span class="extype" name="scala.reflect.api.TypeTags.WeakTypeTag">scala.reflect.api.JavaUniverse.WeakTypeTag</span>[<span class="extype" name="scroll.internal.support.RoleConstraints.RoleProhibition.B">B</span>]</span>)</span><span class="result">: <a href="http://www.scala-lang.org/api/2.11.7/index.html#scala.Unit" class="extype" target="_top">Unit</a></span>
       </span>
       </h4><span class="permalink">
-      <a href="../../../index.html#scroll.internal.support.RoleConstraints@RoleProhibition[A,B]()(implicitevidence$5:scala.reflect.Manifest[A],implicitevidence$6:scala.reflect.Manifest[B]):Unit" title="Permalink" target="_top">
+      <a href="../../../index.html#scroll.internal.support.RoleConstraints@RoleProhibition[A,B]()(implicitevidence$5:reflect.runtime.universe.WeakTypeTag[A],implicitevidence$6:reflect.runtime.universe.WeakTypeTag[B]):Unit" title="Permalink" target="_top">
         <img src="../../../lib/permalink.png" alt="Permalink" />
       </a>
     </span>
