--- a/scroll/internal/support/RoleRestrictions.html
+++ b/scroll/internal/support/RoleRestrictions.html
@@ -150,18 +150,18 @@
     </span>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>AnyRef → Any</dd></dl></div>
     </li><li name="scroll.internal.support.RoleRestrictions#ReplaceRoleRestriction" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="ReplaceRoleRestriction[A,B](implicitevidence$2:Manifest[A],implicittag:reflect.runtime.universe.WeakTypeTag[B]):Unit"></a>
-      <a id="ReplaceRoleRestriction[A,B](Manifest[A],scala.reflect.api.JavaUniverse.WeakTypeTag[B]):Unit"></a>
+      <a id="ReplaceRoleRestriction[A,B](implicitevidence$2:reflect.runtime.universe.WeakTypeTag[A],implicittag:reflect.runtime.universe.WeakTypeTag[B]):Unit"></a>
+      <a id="ReplaceRoleRestriction[A,B](scala.reflect.api.JavaUniverse.WeakTypeTag[A],scala.reflect.api.JavaUniverse.WeakTypeTag[B]):Unit"></a>
       <h4 class="signature">
       <span class="modifier_kind">
         <span class="modifier"></span>
         <span class="kind">def</span>
       </span>
       <span class="symbol">
-        <span class="name">ReplaceRoleRestriction</span><span class="tparams">[<span name="A">A</span>, <span name="B">B</span>]</span><span class="params">(<span class="implicit">implicit </span><span name="arg0">arg0: <span class="extype" name="scala.Predef.Manifest">Manifest</span>[<span class="extype" name="scroll.internal.support.RoleRestrictions.ReplaceRoleRestriction.A">A</span>]</span>, <span name="tag">tag: <span class="extype" name="scala.reflect.api.TypeTags.WeakTypeTag">scala.reflect.api.JavaUniverse.WeakTypeTag</span>[<span class="extype" name="scroll.internal.support.RoleRestrictions.ReplaceRoleRestriction.B">B</span>]</span>)</span><span class="result">: <a href="http://www.scala-lang.org/api/2.11.7/index.html#scala.Unit" class="extype" target="_top">Unit</a></span>
+        <span class="name">ReplaceRoleRestriction</span><span class="tparams">[<span name="A">A</span>, <span name="B">B</span>]</span><span class="params">(<span class="implicit">implicit </span><span name="arg0">arg0: <span class="extype" name="scala.reflect.api.TypeTags.WeakTypeTag">scala.reflect.api.JavaUniverse.WeakTypeTag</span>[<span class="extype" name="scroll.internal.support.RoleRestrictions.ReplaceRoleRestriction.A">A</span>]</span>, <span name="tag">tag: <span class="extype" name="scala.reflect.api.TypeTags.WeakTypeTag">scala.reflect.api.JavaUniverse.WeakTypeTag</span>[<span class="extype" name="scroll.internal.support.RoleRestrictions.ReplaceRoleRestriction.B">B</span>]</span>)</span><span class="result">: <a href="http://www.scala-lang.org/api/2.11.7/index.html#scala.Unit" class="extype" target="_top">Unit</a></span>
       </span>
       </h4><span class="permalink">
-      <a href="../../../index.html#scroll.internal.support.RoleRestrictions@ReplaceRoleRestriction[A,B](implicitevidence$2:Manifest[A],implicittag:reflect.runtime.universe.WeakTypeTag[B]):Unit" title="Permalink" target="_top">
+      <a href="../../../index.html#scroll.internal.support.RoleRestrictions@ReplaceRoleRestriction[A,B](implicitevidence$2:reflect.runtime.universe.WeakTypeTag[A],implicittag:reflect.runtime.universe.WeakTypeTag[B]):Unit" title="Permalink" target="_top">
         <img src="../../../lib/permalink.png" alt="Permalink" />
       </a>
     </span>
@@ -170,18 +170,18 @@ new role restriction between the given player type A and role type B.</p><div cl
 new role restriction between the given player type A and role type B.
 </p></div><dl class="paramcmts block"><dt class="tparam">A</dt><dd class="cmt"><p>the player type</p></dd><dt class="tparam">B</dt><dd class="cmt"><p>the role type</p></dd><dt class="param">tag</dt><dd class="cmt"><p>implicitly added WeakTypeTag for the role type</p></dd></dl></div>
     </li><li name="scroll.internal.support.RoleRestrictions#RoleRestriction" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="RoleRestriction[A,B](implicitevidence$1:Manifest[A],implicittag:reflect.runtime.universe.WeakTypeTag[B]):Unit"></a>
-      <a id="RoleRestriction[A,B](Manifest[A],scala.reflect.api.JavaUniverse.WeakTypeTag[B]):Unit"></a>
+      <a id="RoleRestriction[A,B](implicitevidence$1:reflect.runtime.universe.WeakTypeTag[A],implicittag:reflect.runtime.universe.WeakTypeTag[B]):Unit"></a>
+      <a id="RoleRestriction[A,B](scala.reflect.api.JavaUniverse.WeakTypeTag[A],scala.reflect.api.JavaUniverse.WeakTypeTag[B]):Unit"></a>
       <h4 class="signature">
       <span class="modifier_kind">
         <span class="modifier"></span>
         <span class="kind">def</span>
       </span>
       <span class="symbol">
-        <span class="name">RoleRestriction</span><span class="tparams">[<span name="A">A</span>, <span name="B">B</span>]</span><span class="params">(<span class="implicit">implicit </span><span name="arg0">arg0: <span class="extype" name="scala.Predef.Manifest">Manifest</span>[<span class="extype" name="scroll.internal.support.RoleRestrictions.RoleRestriction.A">A</span>]</span>, <span name="tag">tag: <span class="extype" name="scala.reflect.api.TypeTags.WeakTypeTag">scala.reflect.api.JavaUniverse.WeakTypeTag</span>[<span class="extype" name="scroll.internal.support.RoleRestrictions.RoleRestriction.B">B</span>]</span>)</span><span class="result">: <a href="http://www.scala-lang.org/api/2.11.7/index.html#scala.Unit" class="extype" target="_top">Unit</a></span>
+        <span class="name">RoleRestriction</span><span class="tparams">[<span name="A">A</span>, <span name="B">B</span>]</span><span class="params">(<span class="implicit">implicit </span><span name="arg0">arg0: <span class="extype" name="scala.reflect.api.TypeTags.WeakTypeTag">scala.reflect.api.JavaUniverse.WeakTypeTag</span>[<span class="extype" name="scroll.internal.support.RoleRestrictions.RoleRestriction.A">A</span>]</span>, <span name="tag">tag: <span class="extype" name="scala.reflect.api.TypeTags.WeakTypeTag">scala.reflect.api.JavaUniverse.WeakTypeTag</span>[<span class="extype" name="scroll.internal.support.RoleRestrictions.RoleRestriction.B">B</span>]</span>)</span><span class="result">: <a href="http://www.scala-lang.org/api/2.11.7/index.html#scala.Unit" class="extype" target="_top">Unit</a></span>
       </span>
       </h4><span class="permalink">
-      <a href="../../../index.html#scroll.internal.support.RoleRestrictions@RoleRestriction[A,B](implicitevidence$1:Manifest[A],implicittag:reflect.runtime.universe.WeakTypeTag[B]):Unit" title="Permalink" target="_top">
+      <a href="../../../index.html#scroll.internal.support.RoleRestrictions@RoleRestriction[A,B](implicitevidence$1:reflect.runtime.universe.WeakTypeTag[A],implicittag:reflect.runtime.universe.WeakTypeTag[B]):Unit" title="Permalink" target="_top">
         <img src="../../../lib/permalink.png" alt="Permalink" />
       </a>
     </span>
