--- a/scroll/internal/support/package.html
+++ b/scroll/internal/support/package.html
@@ -90,7 +90,7 @@ things like <a href="Relationships.html" class="extype" name="scroll.internal.su
 
         <div id="types" class="types members">
               <h3>Type Members</h3>
-              <ol><li name="scroll.internal.support.DispatchQuery" visbl="pub" data-isabs="false" fullComment="no" group="Ungrouped">
+              <ol><li name="scroll.internal.support.DispatchQuery" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
       <a id="DispatchQueryextendsAnyRef"></a>
       <a id="DispatchQuery:DispatchQuery"></a>
       <h4 class="signature">
@@ -106,8 +106,10 @@ things like <a href="Relationships.html" class="extype" name="scroll.internal.su
         <img src="../../../lib/permalink.png" alt="Permalink" />
       </a>
     </span>
-      <p class="shortcomment cmt">All provided query function must be side-effect free!
-</p>
+      <p class="shortcomment cmt">Composed dispatch query, i.e.</p><div class="fullcomment"><div class="comment cmt"><p>Composed dispatch query, i.e. applying the composition of all dispatch queries the given set of edges
+through the function <i>reorder</i>.
+All provided queries must be side-effect free!
+</p></div></div>
     </li><li name="scroll.internal.support.QueryStrategies" visbl="pub" data-isabs="true" fullComment="no" group="Ungrouped">
       <a id="QueryStrategiesextendsReflectiveHelper"></a>
       <a id="QueryStrategies:QueryStrategies"></a>
@@ -210,7 +212,7 @@ object or the return value of one of its functions.</p>
         <span class="kind">object</span>
       </span>
       <span class="symbol">
-        <a href="DispatchQuery$.html"><span class="name">DispatchQuery</span></a><span class="result"> extends <a href="../util/ReflectiveHelper.html" class="extype" name="scroll.internal.util.ReflectiveHelper">ReflectiveHelper</a></span>
+        <a href="DispatchQuery$.html"><span class="name">DispatchQuery</span></a>
       </span>
       </h4><span class="permalink">
       <a href="../../../index.html#scroll.internal.support.package@DispatchQuery" title="Permalink" target="_top">
