--- a/scroll/internal/util/ReflectiveHelper$.html
+++ b/scroll/internal/util/ReflectiveHelper$.html
@@ -385,6 +385,25 @@ occurrence of &quot;<code>$</code>&quot;.
       </a>
     </span>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>AnyRef</dd></dl></div>
+    </li><li name="scroll.internal.util.ReflectiveHelper#simpleName" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
+      <a id="simpleName(t:String):String"></a>
+      <a id="simpleName(String):String"></a>
+      <h4 class="signature">
+      <span class="modifier_kind">
+        <span class="modifier"></span>
+        <span class="kind">def</span>
+      </span>
+      <span class="symbol">
+        <span class="name">simpleName</span><span class="params">(<span name="t">t: <span class="extype" name="scala.Predef.String">String</span></span>)</span><span class="result">: <span class="extype" name="scala.Predef.String">String</span></span>
+      </span>
+      </h4><span class="permalink">
+      <a href="../../../index.html#scroll.internal.util.ReflectiveHelper$@simpleName(t:String):String" title="Permalink" target="_top">
+        <img src="../../../lib/permalink.png" alt="Permalink" />
+      </a>
+    </span>
+      <p class="shortcomment cmt">Translates a Class or Type name to a String, i.e.</p><div class="fullcomment"><div class="comment cmt"><p>Translates a Class or Type name to a String, i.e. removing anything before the last
+occurrence of &quot;<code>$</code>&quot; or &quot;<code>.</code>&quot;.
+</p></div><dl class="paramcmts block"><dt class="param">t</dt><dd class="cmt"><p>the Class or Type name as String</p></dd><dt>returns</dt><dd class="cmt"><p>anything after the last occurrence of &quot;<code>$</code>&quot; or &quot;<code>.</code>&quot;</p></dd></dl></div>
     </li><li name="scala.AnyRef#synchronized" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
       <a id="synchronized[T0](x$1:=&gt;T0):T0"></a>
       <a id="synchronized[T0](⇒T0):T0"></a>
