--- a/scroll/internal/util/ReflectiveHelper$Reflective.html
+++ b/scroll/internal/util/ReflectiveHelper$Reflective.html
@@ -369,18 +369,18 @@ to access common tasks for working with reflections.
     </span>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>AnyRef → Any</dd></dl></div>
     </li><li name="scroll.internal.util.ReflectiveHelper.Reflective#is" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="is[T](implicitevidence$1:Manifest[T]):Boolean"></a>
-      <a id="is[T](Manifest[T]):Boolean"></a>
+      <a id="is[T](implicitevidence$1:reflect.runtime.universe.WeakTypeTag[T]):Boolean"></a>
+      <a id="is[T](scala.reflect.api.JavaUniverse.WeakTypeTag[T]):Boolean"></a>
       <h4 class="signature">
       <span class="modifier_kind">
         <span class="modifier"></span>
         <span class="kind">def</span>
       </span>
       <span class="symbol">
-        <span class="name">is</span><span class="tparams">[<span name="T">T</span>]</span><span class="params">(<span class="implicit">implicit </span><span name="arg0">arg0: <span class="extype" name="scala.Predef.Manifest">Manifest</span>[<span class="extype" name="scroll.internal.util.ReflectiveHelper.Reflective.is.T">T</span>]</span>)</span><span class="result">: <a href="http://www.scala-lang.org/api/2.11.7/index.html#scala.Boolean" class="extype" target="_top">Boolean</a></span>
+        <span class="name">is</span><span class="tparams">[<span name="T">T</span>]</span><span class="params">(<span class="implicit">implicit </span><span name="arg0">arg0: <span class="extype" name="scala.reflect.api.TypeTags.WeakTypeTag">scala.reflect.api.JavaUniverse.WeakTypeTag</span>[<span class="extype" name="scroll.internal.util.ReflectiveHelper.Reflective.is.T">T</span>]</span>)</span><span class="result">: <a href="http://www.scala-lang.org/api/2.11.7/index.html#scala.Boolean" class="extype" target="_top">Boolean</a></span>
       </span>
       </h4><span class="permalink">
-      <a href="../../../index.html#scroll.internal.util.ReflectiveHelper$Reflective@is[T](implicitevidence$1:Manifest[T]):Boolean" title="Permalink" target="_top">
+      <a href="../../../index.html#scroll.internal.util.ReflectiveHelper$Reflective@is[T](implicitevidence$1:reflect.runtime.universe.WeakTypeTag[T]):Boolean" title="Permalink" target="_top">
         <img src="../../../lib/permalink.png" alt="Permalink" />
       </a>
     </span>
