--- a/scroll/internal/util/ReflectiveHelper.html
+++ b/scroll/internal/util/ReflectiveHelper.html
@@ -58,7 +58,7 @@ to access common tasks for working with reflections.
           <div class="superTypes hiddenContent"><a href="http://www.scala-lang.org/api/2.11.7/index.html#scala.AnyRef" class="extype" target="_top">AnyRef</a>, <a href="http://www.scala-lang.org/api/2.11.7/index.html#scala.Any" class="extype" target="_top">Any</a></div>
         </div><div class="toggleContainer block">
             <span class="toggle">Known Subclasses</span>
-            <div class="subClasses hiddenContent"><a href="../CachedCompartment.html" class="extype" name="scroll.internal.CachedCompartment">CachedCompartment</a>, <a href="../Compartment.html" class="extype" name="scroll.internal.Compartment">Compartment</a>, <a href="../support/DispatchQuery$.html" class="extype" name="scroll.internal.support.DispatchQuery">DispatchQuery</a>, <a href="../KiamaCompartment.html" class="extype" name="scroll.internal.KiamaCompartment">KiamaCompartment</a>, <a href="../support/QueryStrategies.html" class="extype" name="scroll.internal.support.QueryStrategies">QueryStrategies</a></div>
+            <div class="subClasses hiddenContent"><a href="../CachedCompartment.html" class="extype" name="scroll.internal.CachedCompartment">CachedCompartment</a>, <a href="../Compartment.html" class="extype" name="scroll.internal.Compartment">Compartment</a>, <a href="../KiamaCompartment.html" class="extype" name="scroll.internal.KiamaCompartment">KiamaCompartment</a>, <a href="../support/QueryStrategies.html" class="extype" name="scroll.internal.support.QueryStrategies">QueryStrategies</a></div>
           </div></div>
         
 
