--- a/scroll/internal/formal/CROI.html
+++ b/scroll/internal/formal/CROI.html
@@ -147,18 +147,18 @@
     </span>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>AnyRef → Any</dd></dl></div>
     </li><li name="scroll.internal.formal.CROI#addCompartment" visbl="pub" data-isabs="false" fullComment="no" group="Ungrouped">
-      <a id="addCompartment[T](c:T)(implicitevidence$1:Manifest[T]):Unit"></a>
-      <a id="addCompartment[T](T)(Manifest[T]):Unit"></a>
+      <a id="addCompartment[T](c:T)(implicitevidence$1:reflect.runtime.universe.WeakTypeTag[T]):Unit"></a>
+      <a id="addCompartment[T](T)(scala.reflect.api.JavaUniverse.WeakTypeTag[T]):Unit"></a>
       <h4 class="signature">
       <span class="modifier_kind">
         <span class="modifier"></span>
         <span class="kind">def</span>
       </span>
       <span class="symbol">
-        <span class="name">addCompartment</span><span class="tparams">[<span name="T">T</span>]</span><span class="params">(<span name="c">c: <span class="extype" name="scroll.internal.formal.CROI.addCompartment.T">T</span></span>)</span><span class="params">(<span class="implicit">implicit </span><span name="arg0">arg0: <span class="extype" name="scala.Predef.Manifest">Manifest</span>[<span class="extype" name="scroll.internal.formal.CROI.addCompartment.T">T</span>]</span>)</span><span class="result">: <a href="http://www.scala-lang.org/api/2.11.7/index.html#scala.Unit" class="extype" target="_top">Unit</a></span>
+        <span class="name">addCompartment</span><span class="tparams">[<span name="T">T</span>]</span><span class="params">(<span name="c">c: <span class="extype" name="scroll.internal.formal.CROI.addCompartment.T">T</span></span>)</span><span class="params">(<span class="implicit">implicit </span><span name="arg0">arg0: <span class="extype" name="scala.reflect.api.TypeTags.WeakTypeTag">scala.reflect.api.JavaUniverse.WeakTypeTag</span>[<span class="extype" name="scroll.internal.formal.CROI.addCompartment.T">T</span>]</span>)</span><span class="result">: <a href="http://www.scala-lang.org/api/2.11.7/index.html#scala.Unit" class="extype" target="_top">Unit</a></span>
       </span>
       </h4><span class="permalink">
-      <a href="../../../index.html#scroll.internal.formal.CROI@addCompartment[T](c:T)(implicitevidence$1:Manifest[T]):Unit" title="Permalink" target="_top">
+      <a href="../../../index.html#scroll.internal.formal.CROI@addCompartment[T](c:T)(implicitevidence$1:reflect.runtime.universe.WeakTypeTag[T]):Unit" title="Permalink" target="_top">
         <img src="../../../lib/permalink.png" alt="Permalink" />
       </a>
     </span>
